--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
     "@mdit-vue/shared": "^1.0.0",
+    "commitizen": "^4.3.0",
+    "cz-customizable": "^7.0.0",
     "sass": "^1.69.5",
     "vitepress": "^1.0.0-rc.31",
     "vue": "^3.3.8"
@@ -9,9 +11,16 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "pub": "sh push.sh"
+    "pub": "sh push.sh",
+    "commit": "git-cz",
+    "commit:all": "git add . && git-cz"
   },
   "dependencies": {
     "element-plus": "^2.4.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   }
 }
