--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "memorandum-document-vitepress",
+  "version": "0.0.2",
+  "description": "备忘录文档",
   "devDependencies": {
     "@mdit-vue/shared": "^1.0.0",
     "commitizen": "^4.3.0",
+    "conventional-changelog-cli": "^4.1.0",
     "cz-customizable": "^7.0.0",
     "sass": "^1.69.5",
     "vitepress": "^1.0.0-rc.31",
@@ -13,7 +17,8 @@
     "docs:preview": "vitepress preview docs",
     "pub": "sh push.sh",
     "commit": "git-cz",
-    "commit:all": "git add . && git-cz"
+    "commit:all": "git add . && git-cz",
+    "changelog": "conventional-changelog -i docs/changelog/CHANGELOG.md -s -r 0"
   },
   "dependencies": {
     "element-plus": "^2.4.2"
