--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cz-customizable": "^7.0.0",
     "sass": "^1.69.5",
     "vitepress": "^1.0.0-rc.31",
+    "vitepress-sidebar": "^1.18.0",
     "vue": "^3.3.8"
   },
   "scripts": {
